--- a/styles/css/about.css
+++ b/styles/css/about.css
@@ -110,6 +110,15 @@ h2{
     
 }
 
+.icons ul {
+    display: flex;
+    justify-content: center;
+}
+
+.icons ul li {
+    margin: 0 1rem;
+}
+
 
 
 
