--- a/styles/css/about.css
+++ b/styles/css/about.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Allura&display=swap');
 
+*{
+    box-sizing: border;
+    margin:0;
+    padding:0;
+}
 
 header {
     background-image: url('../../images/about/fraser-cottrell-I3KHqMW0At4-unsplash.png');
@@ -8,13 +13,15 @@ header {
     background-repeat: no-repeat;
     background-color: black;
     opacity:1;
-    padding:3.125rem 0;
+    /* padding:3.125rem 0; */
+    padding: 1rem 0;
 
 }
 
 .container{
     width:80%;
     margin:0 auto;
+    /* border:3px solid red; */
   
    
 }
@@ -65,9 +72,12 @@ h2{
     background-position: center;
     background-size:cover;
     background-repeat: no-repeat;
-    height:13.125rem;
-    /* border:3px solid coral; */
-    width:18.75rem;
+    /* height:13.125rem; */
+    height:24rem;
+    border:3px solid coral;
+    /* width:18.75rem; */
+    width:30rem;
+    
 }
 
 
@@ -75,18 +85,26 @@ h2{
 .profile{
     display:flex;
     align-items:center;
-    gap:3.125rem;
-    /* border:3px solid red; */
+   gap:3.125rem;
+    
+     /* gap:0.1rem; */
+    /* border:3px solid green; */
     justify-content: space-around;
-    padding:0.9375rem;
+    /* padding:0.9375rem 0; */
+    padding:0.5rem 4rem;
+
 
 }
 
 .profile p{
-    width:50%;
+    width:55%;
+    /* font-size:23px; */
+    
+    line-height:1.7;
 }
 .introduction{
     background:#000000;
+    /* border:3px solid indigo; */
  
 }
 
@@ -133,6 +151,10 @@ h2{
 
 }
 
+.spice-detail p{
+    /* font-size:24px; */
+}
+
 .spice-detail p,h3{
     max-width:390px;
 }
@@ -145,12 +167,7 @@ h2{
 }
 
 
-/* .spice-detail {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-} */
+
 
 .shrimp-photo {
     background-image: url("../../images/about/shrimp-prawn-powder_1366570244.png");
@@ -179,4 +196,140 @@ h2{
     background-size: cover;
     background-repeat: no-repeat;
     
+}
+
+
+
+
+
+/* NAVBAR */
+
+
+.navbar {
+    display: flex;
+    align-items: center;
+    color: white;
+
+}
+
+
+
+.navbar-links ul {
+    display: flex;
+    list-style-type: none;
+}
+
+.navbar-links li a {
+    display: block;
+}
+
+.toggle-button {
+    position: absolute;
+    top: 5rem;
+    right: 6rem;
+    display: none;
+    /* display:none insted of display:flex; on big screen*/
+    flex-direction: column;
+    justify-content: space-between;
+    width: 50px;
+    height: 50px;
+    /* border: 2px solid red; */
+    border-radius: 5px;
+
+}
+
+.toggle-button .bar {
+    height: 4px;
+    margin: 5px 0;
+    width: 100%;
+    background-color: white;
+    border-radius: 10px;
+}
+
+
+@media (max-width:790px) {
+    .toggle-button {
+        display: flex;
+    }
+
+    .navbar-links {
+        display: none;
+        width: 100%;
+    }
+
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar-links ul {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .navbar-links li {
+        text-align: center;
+    }
+
+    .navbar-links li a {
+        padding: .5rem 1rem;
+    }
+
+    .navbar-links.active {
+        display: flex;
+    }
+}
+
+
+@media screen and (max-width:881px){
+    .profile{
+        display:flex;
+        flex-direction:column;
+        padding:3rem 0;
+    }
+
+    .profile p{
+        width:80%;
+    }
+
+    .spices{
+        display:flex;
+        flex-direction:column;
+        /* display:block; */
+    }
+
+    .spice-detail{
+        width: 100%;
+        height: 50%;
+        padding-left:1rem;
+        padding-right:1rem;
+        box-sizing: border-box;
+    }
+
+
+
+        .shrimp-photo {
+            /* margin:0 auto; */
+            width: 100%;
+            height: 50%;
+    
+        }
+        .paprika-photo {
+            /* margin:0 auto; */
+            width: 100%;
+            height: 50%;
+    
+        }
+        .curry-photo {
+            /* margin:0 auto; */
+            width: 100%;
+            height: 50%;
+    
+        }
+        .ginger-photo {
+            /* margin:0 auto; */
+            width: 100%;
+            height: 50%;
+    
+        }
 }
