--- a/styles/css/contact.css
+++ b/styles/css/contact.css
@@ -7,6 +7,8 @@
     text-transform: capitalize;
 }
 
+
+
 .container{
     width:80%;
     margin:0 auto;
@@ -64,19 +66,25 @@ header {
 }
 
 
-input,textarea{
+input[type="text"],textarea{
     margin:1.25rem 0;
     padding:0.625rem;
     border-radius: 0.3125rem;
     border:none;
     font-size:1.25rem;
     font-family: sans-serif;
+    width: 100%;
+   
     
 }
 
 textarea:focus {
     outline: none;
+
 }
+
+
+
 
 input[type="submit"]{
     text-transform:uppercase;
@@ -85,6 +93,7 @@ input[type="submit"]{
     font-size:1.125rem;
     background-color:var(--turmeric-lightest);
     color:white;
+    border:none;
 }
 
 input[type="submit"]:hover{
@@ -151,3 +160,135 @@ nav ul li {
 
 
 
+
+
+
+@media screen and (max-width:738px){
+    .contact{
+        display:flex;
+        flex-direction:column;
+        /* border:3px solid red; */
+        margin-top:3rem;
+    }
+
+    .hero{
+        height:auto;
+    }
+
+
+    .schedule{
+        display:flex;
+        flex-direction: column;
+      
+        
+
+    }
+
+
+    .photo{
+        height:50%;
+        width:100%
+    }
+
+    .working-period{
+        display:flex;
+        flex-direction: column;
+     
+    }
+
+    .hours{
+       
+        width:100%;
+        height:50%;
+         
+    }
+
+    .hours h2{
+        margin-bottom:0.3rem;
+        margin-top:0.5rem;
+        font-size:3rem;
+    }
+}
+
+
+
+
+
+
+/* NAVBAR */
+
+
+.navbar {
+    display: flex;
+    align-items: center;
+    color: white;
+
+}
+
+
+
+.navbar-links ul {
+    display: flex;
+    list-style-type: none;
+}
+
+.navbar-links li a {
+    display: block;
+}
+
+.toggle-button {
+    position: absolute;
+    top: 9rem;
+    right: 6rem;
+    display: none;
+    /* display:none insted of display:flex; on big screen*/
+    flex-direction: column;
+    justify-content: space-between;
+    width: 50px;
+    height: 50px;
+    /* border: 2px solid white; */
+    border-radius: 5px;
+
+}
+
+.toggle-button .bar {
+    height: 4px;
+    margin: 5px 0;
+    width: 100%;
+    background-color: white;
+    border-radius: 10px;
+}
+
+
+@media (max-width:790px) {
+    .toggle-button {
+        display: flex;
+    }
+
+    .navbar-links {
+        display: none;
+        width: 100%;
+    }
+
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar-links ul {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .navbar-links li {
+        text-align: center;
+    }
+
+    .navbar-links li a {
+        padding: .5rem 1rem;
+    }
+
+    .navbar-links.active {
+        display: flex;
+    }
+}
